--- a/CodeChallege/logging.properties
+++ b/CodeChallege/logging.properties
@@ -34,5 +34,5 @@ java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 
 # For example, set the com.xyz.foo logger to only log SEVERE
 # messages:
-project.level = WARNING
+project.level = INFO
 
